# ml-classifier-app

./: README.md  app-prod.py  app.py  pyproject.toml  setup.py
models/: dec_tree.joblib  lgbm_model.joblib
notebooks/: app-ml.ipynb  app-prod.ipynb  eda.ipynb  ml.ipynb  preprocessing.ipynb
src/: categorical_encoder.py  feature_importance.py  train_evaluate.py
